# Todo-list-service

./: .env  Cargo.toml  README.md  database.sqlite
client/: index.html  registration.html
frontend/: package-lock.json  package.json
frontend/src/routes/: +page.svelte  +page.ts
migrations/: 20230816112133_todos.sql
src/: main.rs
