[package]
name = "todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["form"] }
axum-error = "0.2.0"
dotenv = "0.15.0"
serde = { version = "1.0.183", features = ["derive"] }
sqlx = { version = "0.7.1", features = ["runtime-tokio", "tls-rustls", "sqlite"] }
tokio = { version = "1.31.0", features = ["full"] }
tower-http = { version = "0.4.3", features = ["cors"] }
